customize feature on eval page

--- a/app/views/pages/evaluator.html.haml
+++ b/app/views/pages/evaluator.html.haml
@@ -92,18 +92,20 @@
                     Customizable for a tailored fit.
                   %p 
                     We know your brand is important, so MetaBright makes customization easy. Control everything from the branding and color scheme of your account, to the precise content your candidates are tested on.
-                .image.right{ style: "box-shadow: none; margin-top:15px; height: 100%;"}
-                  .image.right{ style: "width: 100%; "} 
-                    %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Screenshots/export_example4.png"}
-                  .clear_floats
-                  .feature_testimonial{ style: "margin-top: 4px; "}
-                    %div{ style: "display: inline-block;"}
-                      = image_tag "https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRdHZrqLSXeTTmCx6ixga5Px23Trw0V-BgT91xekGH7C4gU4ZAo", class: "img-circle", style: "width:98px;"
-                    %div{ style: "width: 69%; position: relative; top 20px; margin-left: 12px; display: inline-block; top: 28px;"} 
-                      .testimonial{ style: "font-family: MuliItalic; font-size: 16px;"}
-                        "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut."
-                      .info
-                        %span - First Last, CEO of Acme Co.
+                .image.right{ style: "margin-top: 13px;"} 
+                  %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Screenshots/export_example6.png"}
+                / .image.right{ style: "box-shadow: none; margin-top:15px; height: 100%;"}
+                /   .image.right{ style: "width: 100%; "} 
+                /     %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Screenshots/export_example4.png"}
+                /   .clear_floats
+                /   .feature_testimonial{ style: "margin-top: 4px; "}
+                /     %div{ style: "display: inline-block;"}
+                /       = image_tag "https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRdHZrqLSXeTTmCx6ixga5Px23Trw0V-BgT91xekGH7C4gU4ZAo", class: "img-circle", style: "width:98px;"
+                /     %div{ style: "width: 69%; position: relative; top 20px; margin-left: 12px; display: inline-block; top: 28px;"} 
+                /       .testimonial{ style: "font-family: MuliItalic; font-size: 16px;"}
+                /         "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut."
+                /       .info
+                /         %span - First Last, CEO of Acme Co.
             %section
               .holder
                 .image{ style: "margin-top:15px; "} 
