--- a/app/views/pages/intro.html.haml
+++ b/app/views/pages/intro.html.haml
@@ -1,5 +1,9 @@
-#employer.intro_wrapper
-  .intro
+:css
+  .employer-container { width: 670px; margin: 110px auto 200px auto; }
+  .employer-box { min-height: inherit; padding: 0;}
+
+#evaluations_overview.employer-container.intro_wrapper
+  .employer-box.intro
     .header
       = image_tag STONEY_MEDIUM_URL, style: "height:47px; margin:4px 4px 0 0;", alt: "Stoney"
       %h1 You're about to start your first Challenge!
