truncated custom challenge names on custom challenge index

--- a/app/views/paths/_table.html.haml
+++ b/app/views/paths/_table.html.haml
@@ -5,5 +5,5 @@
 
 %ul.inlinedisplay
   - @paths.each do |path|
-    = render "shared/mosaic", { pic: path.path_pic, link: edit_group_path_path(path.group_id, path.permalink), title: path.name, subtitle: "#{path.enrollments.size} users" }
+    = render "shared/mosaic", { pic: path.path_pic, link: edit_group_path_path(path.group_id, path.permalink), title: truncate(path.name, length: 20, separator: ' '), subtitle: "#{path.enrollments.size} users" }
 = link_to "+ Create a new Challenge", new_group_path_url, class: "create_link"
