--- a/app/views/tasks/continue.html.haml
+++ b/app/views/tasks/continue.html.haml
@@ -1,13 +1,13 @@
 :css
   body.employer{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
-    
+= render "modals/evaluation"
 %div.quizcontainer.hide{ style: "#{@stored_resource.nil? ? '': 'margin-top: 110px;'} #{'width: inherit;' unless @show_stats}" }
   = render "modals/report_issue"
   %div.quizspace
     - @show_feedback = true if @show_feedback.nil?
     :javascript
       $(function(){
-        $.MB.Arena.init({start_countdown: #{@start_countdown}, show_feedback: #{@show_feedback}, delay: #{@task.delay}});
+        $.MB.arena = new Arena(#{@task.delay}, #{@show_feedback}, #{@start_countdown})
         $(".quizcontainer").fadeIn();
       });
      
@@ -91,3 +91,8 @@
         %div.messagespace{ style: "text-align: right; margin: 12px 0px 0px 25px; width: 258px;" }
       - if current_user and params[:controller] != "evaluations"
         %a.arena_report_link{ style: "float:right; text-decoration:none;"} Report this question
+- if @evaluation and false
+  :javascript
+    $(window).unbind("blur").blur(function(){
+      $("#evaluation_modal").modal({show: true, animate: false})
+    });
