--- a/app/views/tasks/continue.html.haml
+++ b/app/views/tasks/continue.html.haml
@@ -7,12 +7,11 @@
     - @show_feedback = true if @show_feedback.nil?
     :javascript
       $(function(){
-        var start_time = #{@completed_task.created_at.utc.to_i*1000}
+        var start_time = #{@completed_task.start_time.utc.to_i*1000}
         var time_limit = 45000
-        var delay = #{@task.delay}
         var feedback = #{@show_feedback}
         var countdown = #{@start_countdown}
-        $.MB.arena = new Arena(start_time, time_limit, delay, feedback, countdown)
+        $.MB.arena = new Arena(start_time, time_limit, feedback, countdown)
         $(".quizcontainer").fadeIn();
       });
      
