signup form on eval page

--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,5 +1,5 @@
 #employer.aboutcontainer.registration
-  .aboutbox
+  .aboutbox{ style: "margin: 5px; "}
     .aboutheader
       %img{ src: STONEY_SMALL_URL, alt: "Stoney"}
       %span Sign up for MetaBright
