--- a/app/assets/stylesheets/launchpad.css.scss
+++ b/app/assets/stylesheets/launchpad.css.scss
@@ -198,5 +198,6 @@ $success_color: #62c462;
   }
   form { margin-bottom: 0; }
   input { padding: 10px 15px; font-size: 16px; width: 157px; text-align: left; }
+  input[type="text"], input[type="password"] {width: 206px; font-size: 13px; padding: 5px 10px;}
   input:nth-child(3) { margin-right:5px; }
 }
