--- a/app/views/pages/challenges.html.haml
+++ b/app/views/pages/challenges.html.haml
@@ -1,6 +1,6 @@
 :css 
-  .aboutcontainer{ width: 703px; background: rgba(36, 72, 109, 0.8); border-radius: 0; } 
-  .aboutbox { border-radius: 0; padding: 20px 20px 0; } 
+  .aboutcontainer{ width: 703px; background: rgba(36, 72, 109, 0.8); border-radius: 8px; } 
+  .aboutbox { border-radius: 0; padding: 20px 20px 0; margin: 5px; border-radius: 4px;} 
 
 .aboutcontainer
   .aboutbox
