--- a/app/views/modals/headlines/_welcome.html.haml
+++ b/app/views/modals/headlines/_welcome.html.haml
@@ -58,9 +58,9 @@
         %div.divider OR
         = form_for(current_user, html: { id: "update_user" }) do |f|
           = hidden_field_tag "redirect_url", challenge_url(@path.permalink, c: true)
-          = f.text_field :name, value: nil, placeholder: "Name"
-          = f.text_field :email, value: nil, placeholder: "E-Mail"
-          = f.password_field :password, value: nil, placeholder: "Password", style: "float: left; margin-left: 10px;"
+          = f.text_field :name, value: nil, placeholder: "Name", style: "width: 157px;"
+          = f.text_field :email, value: nil, placeholder: "E-Mail", style: "width: 157px;"
+          = f.password_field :password, value: nil, placeholder: "Password", style: "float: left; margin-left: 10px; width: 157px;"
           = f.submit "Submit", class: "submit_button_green", style: "display: block; margin-right: 10px; width: inherit;"
           .clear_floats
   .exit{ style: "float: right; margin-top: 20px;" }
