Arena IE fixes.

--- a/app/views/layouts/_styles_and_scripts.html.haml
+++ b/app/views/layouts/_styles_and_scripts.html.haml
@@ -10,6 +10,8 @@
   #fb-root
   
 :javascript
+  if ( ! window.console ) console = { log: function(){} };
+
   var mark_read_url = '#{mark_read_url}';
   var disabled_button = false;
   
