--- a/app/views/tasks/continue.html.haml
+++ b/app/views/tasks/continue.html.haml
@@ -77,7 +77,7 @@
                   %span= d
             %br
             %span= label
-          %div.streakspace.counterbox{ style: "width: #{@show_feedback ? '60' : '90'};" }
+          %div.streakspace.counterbox{ style: "width: #{@show_feedback ? '60' : '90'}px;" }
             %span.counter
               - if @show_feedback
                 - digits = @streak
