Fixing for fast clocks as well.

--- a/app/views/tasks/continue.html.haml
+++ b/app/views/tasks/continue.html.haml
@@ -7,12 +7,13 @@
     - @show_feedback = true if @show_feedback.nil?
     :javascript
       $(function(){
+        var points = #{@completed_task.points_remaining}
         var start_time = #{@completed_task.start_time.utc.to_i*1000}
         var time_limit = 45000
         var delay = #{@task.delay}
         var feedback = #{@show_feedback}
         var countdown = #{@start_countdown}
-        $.MB.arena = new Arena(delay, start_time, time_limit, feedback, countdown)
+        $.MB.arena = new Arena(points, delay, start_time, time_limit, feedback, countdown)
         $(".quizcontainer").fadeIn();
       });
      
